# npi

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/npi/: __init__.py  errors.py  get_request  get_request.py  install.py  list.py  list_modules.py  main.py  module_index.py  npi_errors.py  search.py  version.py
tests/: conftest.py  test_install.py  test_integration_install.py  test_integration_version.py  test_version.py
