[project]
name = "npi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andrerhenry", email = "kinghenry238@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.12.2",
    "requests>=2.32.3",
    "setuptools>=75.8.2",
    "wheel>=0.45.1",
    "yarl>=1.18.3",
]

[tool.setuptools]
packages = ["npi"]
packages-dir = {"" = "src"}

[tool.uv.sources]
npi = { workspace = true }



[project.scripts]
npi = "npi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "npi",
]
