[project]
name = "npi"
version = "0.3.2"
description = "npi help you install and manage packages for the Niagara systems."
keywords = ["BAS", "Niagara", "Tridium","package", "manager", "building", "HVAC", "control", "air", "hydronic", "Engineering"]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Topic :: Scientific/Engineering"]
readme = "README.md"
authors = [
    { name = "andrerhenry", email = "kinghenry238@gmail.com" }
]

requires-python = ">=3.10"
dependencies = [
    "rapidfuzz>=3.12.2",
    "requests>=2.32.3",
    "setuptools>=75.8.2",
    "wheel>=0.45.1",
    "yarl>=1.18.3",
]


[tool.uv.sources]
npi = { workspace = true }

[project.scripts]
npi = "npi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "npi",
    "types-requests>=2.32.0.20250328",
]
