[project]
name = "npi"
version = "0.3.4"
description = "npi help you install and manage packages for the Niagara systems."
keywords = ["BAS", "Niagara", "Tridium","package", "manager", "building", "HVAC", "control", "air", "hydronic", "Engineering"]
classifiers = ["Development Status :: 2 - Pre-Alpha", "Topic :: Scientific/Engineering"]
readme = "README.md"
authors = [
    { name = "andrerhenry", email = "kinghenry238@gmail.com" }
]

requires-python = ">=3.10"
dependencies = [
    "jproperties>=2.1.2",
    "rapidfuzz>=3.12.2",
    "requests>=2.32.3",
    "setuptools>=75.8.2",
    "wheel>=0.45.1",
    "yarl>=1.18.3",
]


[tool.uv.sources]
npi = { workspace = true }

[project.scripts]
npi = "npi.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "npi",
    "pytest>=8.3.5",
    "types-requests>=2.32.0.20250328",
]
